# readme2demo

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  LAUNCH_CHECKLIST.md  LICENSE  README.md  RELEASE_PLAN.md  ROADMAP.md  SECURITY.md  action.yml  mkdocs.yml  pyproject.toml  readme2demo.toml.example
.claude/agents/: grounding-auditor.md  run-debugger.md
.claude/commands/: ship-check.md
.claude/skills/add-engine/: SKILL.md
.claude/skills/add-failure-class/: SKILL.md
.claude/skills/debug-run/: SKILL.md
.claude/skills/docker-sandbox/: SKILL.md
.claude/skills/git-github-operator/: SKILL.md
.claude/skills/python-standards/: SKILL.md
.claude/skills/sandbox-toolchains/: SKILL.md
.claude/skills/vhs-video/: SKILL.md
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: action-selftest.yml  ci.yml  docs.yml  release.yml
architecture/: README.md
docs/: configuration.md  dependencies.md  faq.md  how-it-works.md  index.md  llms.txt  security.md  usage.md  whats-new-0.7.0.md
examples/: README.md
examples/readme2demo/: commands.sh  howto.jsonld  manifest.json  step_by_step.md  troubleshooting.md  tutorial.md
examples/toolhive/: commands.sh  howto.jsonld  manifest.json  step_by_step.md  troubleshooting.md  tutorial.md
images/base/: Dockerfile
images/openhands/: Dockerfile
scripts/: self-demo.sh
src/readme2demo/: __init__.py  agent.py  cli.py  config.py  distill.py  escaping.py  formats.py  ingest.py  llm.py  manifest.py  normalize.py  orchestrator.py  render.py  sandbox.py  tts.py  tutorial.py  types.py  verify.py
src/readme2demo/engines/: __init__.py  base.py  claude_code.py  openhands.py
src/readme2demo/prompts/: agent.md  distill.md  planner.md  tutorial.md
src/readme2demo/templates/: demo.tape.j2  tutorial.md.j2
tests/: conftest.py  test_cli.py  test_config.py  test_distill.py  test_ingest.py  test_llm_backend.py  test_normalize.py  test_orchestrator.py  test_render_timeout_image.py  test_sandbox.py  test_tts_providers.py  test_tutorial.py  test_verify.py  test_version.py
tests/fixtures/: claude_transcript.ndjson
